fix discard pile z-index issues; fix discard size counter; cards are locked during animations; minor server-side fixes

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -71,6 +71,7 @@ img {
   border-radius: 4px;
   position: absolute;
 }
+
 .smallDeck {
   border: 1px solid black;
 }
@@ -78,6 +79,13 @@ img {
   border: 1px dashed black;
 }
   
+.discard .stackCounter, .smallDiscard .stackCounter {
+	z-index: 10;
+}
+
+.discard .card, .smallDiscard .card {
+	z-index: 0;
+}
   
 .cardTemplate,.card,.cardSized,#playerHand {
   height: 160px;
@@ -178,7 +186,7 @@ img {
   color: cornflowerblue;
   border: 1px solid cornflowerblue;
   border-radius: 12px;
-  z-index:1;
+  /*z-index:1;*/
 }
 
 .handArea{
